fix overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  max-width: 100vw;
+}
 .App {
   text-align: center;
 }
@@ -29,6 +32,14 @@
   justify-content: center;
 }
 
+.a-center {
+  align-items: center;
+}
+
+.f-bottom {
+  justify-content: bottom;
+}
+
 .scale {
   margin: 20px 0;
 }
@@ -45,10 +56,13 @@
 
 main {
   max-width: 100vw;
+}
+main>div {
+  margin: 20px;
+  padding: 20px;
   overflow: hidden;
   overflow: scroll;
 }
-
 input[type='number']{
   font-size: 20px;
   width: 50px;
